--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,11 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
 @layer base {
+  /* Définition de la police globale */
+  body {
+    font-family: "Geist", sans-serif;
+    @apply bg-background text-foreground;
+  }
+
+  /* Variables globales pour le thème clair */
   :root {
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
@@ -34,6 +37,8 @@ body {
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
   }
+
+  /* Variables globales pour le thème sombre */
   .dark {
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
@@ -60,13 +65,9 @@ body {
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
   }
-}
 
-@layer base {
+  /* Application des styles Tailwind */
   * {
     @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
   }
 }
